JCAPTCHA-14 : Correction of sonar issues.
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/cms/module-captcha-jcaptcha@49186 bab10101-e421-0410-a517-8ce0973de3ef